css/blog.css
@import url("navbar_mobile.css") all and (max-width: 767px);
@import url("navbar_z0.css") all and (min-width: 768px);

@media all and (max-width: 767px) {
    html body {
        width: 100%;
        height: auto;
    }

    body #title {
        font-size: 27pt;
        text-align: center;
        margin-left: 0px;
        margin-bottom: 15px;
    }
    
    body #comments {
        margin: 0px;
        min-width: 0px;
        padding: 0px;
        width: 100%;
        font-size: 16pt;
        border-radius: none;
    }
    
    #comments .comments_header {
        padding-left: 15px;
    }
    #comments .comments_text {
        padding-left: 15px;
        padding-right: 15px;
        padding-bottom: 25px;
    }
}

/* Hide mobile stuff */
#navbar_mobile_frame_top {
    display: none;
}
#navbar_mobile_frame_side {
    display: none;
}

body {
    background-color: black;
    margin: 0px;
}

#title {
    color: white;
    font-family: "Arial";
    font-size: 42px;
    margin-left: 20%;
    margin-top: 30px;
}

#comments {
    position: absolute;
    margin-left: 20vw;
    min-width: 700px;
    width: 60vw;
    margin-top: 40px;
    padding-top: 20px;
    background-color: #1A1A1A;
    border-radius: 6px;
    color: white;
    padding-left: 20px;
    padding-right: 20px;
    padding-bottom: 20px;
}

#comments a {
    color: red;
}

.comments_header {
    font-size: 32px;
    font-weight: bold;
    font-family: "Arial";
    padding-bottom: 5px;
    padding-top: 10px;
}

.comments_text {
    font-size: 18px;
    font-family: "Arial";
}

#sidebar {
    position: fixed;
    height: 500px;
    margin-top: 100px;
    margin-left: 20px;
    width: 15vw;
    background-color: #1A1A1A;
    color: white;
    display: none;
}

#sidebar_title {
    padding: 5px;
    font-family: "Arial";
    font-size: 28px;
    text-align: center;
    background-color: red;
    color: black;
}

#sidebar_links {
    width: 100%;
    height: 100%;
}

#sidebar_links a {
    font-size: 28px;
    display: block;
    padding: 15px;
    text-decoration: none;
    color: grey;
    text-align: center;
    transition: 0.4s;
}

#sidebar_links a:hover {
    background-color: grey;
    color: lightgrey;
    border: none;
}

#sidebar_links .slideout_content {
    display: none;
    height: 0px;
    overflow: hidden;
    transition: height 1s;
}

#sidebar_links .slideout:hover .slideout_content {
    display: block;
    height: auto;
}

